Audit Merged to catissuesuite
SVN-Revision: 23624

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2434,3 +2434,25 @@ bulk.success.message=Bulk operation successfully done.
 bulk.error.csv.column.name.change=Column name in CSV template is changed. Please download a new template again.
 bulk.error.database.operation.reading.operation.name.xml.template=Error in Database operation while retrieving the Bulk Operation Name and its meta data. Please report this problem to Administrator.
 bulk.no.templates.loaded.message=Please load Bulk Operations template to perform Bulk Operations.
+
+
+#For SQL injection.
+db.prepstmt.param.error=Invalid query {0}, check your query.
+db.malicious.data.encountered=Invalid data : {0}, encountered invalid character character : {1}. Remove "{1}" malicious code before performing database operation.
+class.auditable=Class {0} is present in auditablemetadata.xml and set to auditable. Audit all it's instance while inserting/updating it to database..
+dao.close.or.not.initialized=DAO is either not initialized properly or it may be closed.
+problem.in.fetching.hibernate.metadata=Either application name is not appropriate or the Hibernate metadata not initialized for the application.
+
+
+#For Audit changes.
+problem.parsing.xml=Problem while parsing auditablemetadata.xml, check/verify it to avoid parsing issues.
+problem.in.audit.invalid.instance=Problem while performing the audit operation, Object not auditable. Check the instance before calling the audit events."
+problem.in.audit.diff.class.type=Problem while performing the audit operation, previous and current instance should be of same class type. Check the instance before calling the audit events.
+error.in.login.audit=Exception while Auditing Login Attempt.
+class.not.found.exp=Class {0} not exist.
+problem.getting.new.instance=Problem in instantiating class {0}. 
+problem.getting.methods=Problem in getting methods of class {0}. 
+class.missing=Class {0} missing in auditablemetadata.xml. Please add the missing entry to audit.
+metadata.not.loaded=auditablemetadata.xml is not loaded. Please initialize it before auditing. Call AuditManager.init()
+
+
