Changes for fixing bug #15185
Validation added to validate the status of updated object.

and API test case added for the same

SVN-Revision: 23641

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -538,6 +538,7 @@ approveUser.newUsersNotFound=No new user records found.
 #--Error Keys Begins--
 errors.title=Error:
 errors.item={0}
+errors.disabled.specimen=Disabled specimens cannot be activated.
 errors.item.required={0} is required.
 error.phonenumber.format=Please enter valid {0}. The valid format is xxx-xxx-xxxx.
 error.faxnumber.format=Please enter valid {0}. The valid format is xxx-xxx-xxxx.
@@ -2450,8 +2451,8 @@ problem.in.audit.invalid.instance=Problem while performing the audit operation, 
 problem.in.audit.diff.class.type=Problem while performing the audit operation, previous and current instance should be of same class type. Check the instance before calling the audit events.
 error.in.login.audit=Exception while Auditing Login Attempt.
 class.not.found.exp=Class {0} not exist.
-problem.getting.new.instance=Problem in instantiating class {0}. 
-problem.getting.methods=Problem in getting methods of class {0}. 
+problem.getting.new.instance=Problem in instantiating class {0}.
+problem.getting.methods=Problem in getting methods of class {0}.
 class.missing=Class {0} missing in auditablemetadata.xml. Please add the missing entry to audit.
 metadata.not.loaded=auditablemetadata.xml is not loaded. Please initialize it before auditing. Call AuditManager.init()
 
