--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2267,7 +2267,7 @@ db.retrieve.data.error=Problem while retrieving data from database.
 db.update.data.error=Problem while updating data/changes to database.
 db.stmt.close.error=Problem while closing statement or prepared statement.
 db.stmt.creation.error=Problem Occurred while creation of statement or prepared statement.
-db.prepstmt.param.error=Invalid query or no value list empty.
+db.prepstmt.param.error=Invalid query {0}, check your query.
 db.insert.data.error=Problem while inserting data/changes to database.
 db.delete.data.error=Problem while deleting data/changes to database.
 db.app.prop.parsing.exp=Problem while parsing ApplicationDAOProperties.xml.
@@ -2418,6 +2418,7 @@ confirm.washu.user=Incorrect confirm email address, WashU domain email address
 
 #Bulk Operations
 bulk.bulkoperations=Bulk Operations
+bulk.bulkoperation.jobs=Bulk Operation Jobs
 bulk.download.template=Select Bulk Operation:
 bulk.upload.file=Upload data:
 bulk.button.download.template=Download CSV Template
@@ -2435,10 +2436,6 @@ bulk.success.message=Bulk operation successfully done.
 bulk.error.csv.column.name.change=Column name in CSV template is changed. Please download a new template again.
 bulk.error.database.operation.reading.operation.name.xml.template=Error in Database operation while retrieving the Bulk Operation Name and its meta data. Please report this problem to Administrator.
 bulk.no.templates.loaded.message=Please load Bulk Operations template to perform Bulk Operations.
-
-
-#For SQL injection.
-db.prepstmt.param.error=Invalid query {0}, check your query.
 db.malicious.data.encountered=Invalid data : {0}, encountered invalid character character : {1}. Remove "{1}" malicious code before performing database operation.
 class.auditable=Class {0} is present in auditablemetadata.xml and set to auditable. Audit all it's instance while inserting/updating it to database..
 dao.close.or.not.initialized=DAO is either not initialized properly or it may be closed.
