Added common jars version 1.1.7
SVN-Revision: 23663

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2453,4 +2453,5 @@ problem.getting.methods=Problem in getting methods of class {0}.
 class.missing=Class {0} missing in auditablemetadata.xml. Please add the missing entry to audit.
 metadata.not.loaded=auditablemetadata.xml is not loaded. Please initialize it before auditing. Call AuditManager.init()
 
-
+db.file.not.found.error=File not found issues, File instance specified in column value bean does not exist. SQL is {0}.
+class.not.found.error = Class {0} not found.
