Changes for Advance Query 1.2 integration
SVN-Revision: 23667

--- a/WEB-INF/src/mainProtocolObjectQueries.properties
+++ b/WEB-INF/src/mainProtocolObjectQueries.properties
@@ -1,2 +1,3 @@
 edu.wustl.catissuecore.domain.ParticipantMedicalIdentifier=Select participantMedicalId.participant.id from edu.wustl.catissuecore.domain.ParticipantMedicalIdentifier participantMedicalId where participantMedicalId.id =
-hookEntity=edu.wustl.catissuecore.domain.Participant
+hookEntityQuery=Select recordEntry.participant.id from edu.wustl.catissuecore.domain.ParticipantRecordEntry recordEntry where recordEntry.id =
+hookEntity=edu.wustl.catissuecore.domain.deintegration.ParticipantRecordEntry
