--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2420,9 +2420,9 @@ confirm.washu.user=Incorrect confirm email address, WashU domain email address
 bulk.bulkoperations=Bulk Operations
 bulk.bulkoperation.jobs=Bulk Operation Jobs
 bulk.download.template=Select Bulk Operation:
-bulk.upload.file=Upload data:
+bulk.upload.file=Upload CSV Template:
 bulk.button.download.template=Download CSV Template
-bulk.button.upload=Upload CSV Template
+bulk.button.upload=Upload Data
 bulk.view.report=Click here to view report
 bulk.error.incorrect.operation.name=Incorrect bulk operation. No such operation is allowed in Bulk Operation.
 bulk.error.bulk.metadata.xml.file=Error in loading BULK OPERATION META DATA. Please report this problem to Administrator.
