Changes for Bug #15317
SVN-Revision: 23678

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2370,6 +2370,7 @@ spec.array.spec.invalid = Please enter valid specimen for specimen array\!\! Spe
 spec.array.spec.does.nt.exists = Please enter valid specimen for specimen array\!\!specimen does not exist {0}
 spec.array.null =  Specimen Array for uploading is null
 storage.specified.full =  The Storage Container you specified is full
+parent.specimen.null = Parent specimen cannot be null
 
 pwd.encrytion.error =  Error while encrypting password.
 role.nt.retrieved =  Could not get the role
