--- a/build.xml
+++ b/build.xml
@@ -571,6 +571,7 @@
     	<copy file="deploy_uk_edin.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="deploy_barcode_generator_DFCI.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="taggedvalues.xml" todir="${zip.dir}" overwrite="true" />
+		<copy file="paths.txt" todir="${zip.dir}" overwrite="true" />
 
 		<copy todir="${zip.dir}/idp" overwrite="true">
 					<fileset dir="${base.dir}/idp" />
