modified for caTissue-ClinPortal integration,
SVN-Revision: 23691

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2456,3 +2456,5 @@ metadata.not.loaded=auditablemetadata.xml is not loaded. Please initialize it be
 
 db.file.not.found.error=File not found issues, File instance specified in column value bean does not exist. SQL is {0}.
 class.not.found.error = Class {0} not found.
+visit.noSCG=SCG is not associated with visit
+user.not.exists=User with login name {0} does not exist.
