modified for caTissue-ClinPortal integration,
SVN-Revision: 23695

--- a/idpInstall.properties
+++ b/idpInstall.properties
@@ -1,4 +1,4 @@
-#if catissue has IdP then idp.enabled=true 
+#if catissue has IdP then idp.enabled=true
 #if idp.enabled=true then only fill below properties of #CLINPORTAL DATABASE CREDENTIALS and #CSM DATABASE CREDENTIALS
 idp.enabled=
 #CLINPORTAL DATABASE CREDENTIALS
@@ -22,3 +22,8 @@ csm.database.port=
 csm.database.name=
 csm.database.username=
 csm.database.password=
+
+#clinportal-caTissue integration
+clinportal.integrationEnabled=false
+clinportal.keyStorePath=
+clinportal.url=
