To solve bug #15329 :NPE occurs while viewing results for Event Parameters
SVN-Revision: 23704

--- a/WEB-INF/src/mainProtocolObjectQueries.properties
+++ b/WEB-INF/src/mainProtocolObjectQueries.properties
@@ -1,3 +1,13 @@
 edu.wustl.catissuecore.domain.ParticipantMedicalIdentifier=Select participantMedicalId.participant.id from edu.wustl.catissuecore.domain.ParticipantMedicalIdentifier participantMedicalId where participantMedicalId.id =
+edu.wustl.catissuecore.domain.Race=Select race.participant.id from edu.wustl.catissuecore.domain.Race race where race.id =
+edu.wustl.catissuecore.domain.SpecimenEventParameters=Select specimenEventParameters.specimen.id from edu.wustl.catissuecore.domain.SpecimenEventParameters specimenEventParameters where specimenEventParameters.id =
+edu.wustl.catissuecore.domain.CollectionEventParameters=Select collectionEventParameters.specimenEventParameters.specimen.id from edu.wustl.catissuecore.domain.CollectionEventParameters collectionEventParameters where collectionEventParameters.id =
+edu.wustl.catissuecore.domain.FrozenEventParameters=Select frozenEventParameters.specimenEventParameters.specimen.id from edu.wustl.catissuecore.domain.FrozenEventParameters frozenEventParameters where frozenEventParameters.id =
+edu.wustl.catissuecore.domain.FixedEventParameters=Select fixedEventParameters.specimenEventParameters.specimen.id from edu.wustl.catissuecore.domain.FixedEventParameters fixedEventParameters where fixedEventParameters.id =
+edu.wustl.catissuecore.domain.TransferEventParameters=Select transferEventParameters.specimenEventParameters.specimen.id from edu.wustl.catissuecore.domain.TransferEventParameters transferEventParameters where transferEventParameters.id =
+edu.wustl.catissuecore.domain.ProcedureEventParameters=Select procedureEventParameters.specimenEventParameters.specimen.id from edu.wustl.catissuecore.domain.ProcedureEventParameters procedureEventParameters where procedureEventParameters.id =
+edu.wustl.catissuecore.domain.EmbeddedEventParameters=Select embeddedEventParameters.specimenEventParameters.specimen.id from edu.wustl.catissuecore.domain.EmbeddedEventParameters embeddedEventParameters where embeddedEventParameters.id =
+edu.wustl.catissuecore.domain.ReceivedEventParameters=Select receivedEventParameters.specimenEventParameters.specimen.id from edu.wustl.catissuecore.domain.ReceivedEventParameters receivedEventParameters where receivedEventParameters.id =
+edu.wustl.catissuecore.domain.DisposalEventParameters=Select disposalEventParameters.specimenEventParameters.specimen.id from edu.wustl.catissuecore.domain.DisposalEventParameters disposalEventParameters where disposalEventParameters.id =
 hookEntityQuery=Select recordEntry.participant.id from edu.wustl.catissuecore.domain.ParticipantRecordEntry recordEntry where recordEntry.id =
 hookEntity=edu.wustl.catissuecore.domain.deintegration.ParticipantRecordEntry
