Bulk Button name changed.
SVN-Revision: 23707

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2421,8 +2421,8 @@ confirm.washu.user=Incorrect confirm email address, WashU domain email address
 bulk.bulkoperations=Bulk Operations
 bulk.bulkoperation.jobs=Bulk Operation Jobs
 bulk.download.template=Select Bulk Operation:
-bulk.upload.file=Upload CSV Template:
-bulk.button.download.template=Download CSV Template
+bulk.upload.file=Upload Template:
+bulk.button.download.template=Download Template
 bulk.button.upload=Upload Data
 bulk.view.report=Click here to view report
 bulk.error.incorrect.operation.name=Incorrect bulk operation. No such operation is allowed in Bulk Operation.
