Bug 15327 -  Bulk dashboard enhancements - for comment #1
SVN-Revision: 23715

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2314,6 +2314,7 @@ storage.nt.hold.spec = This Storage Container cannot hold \t{0}  Specimen
 invalid.label.barcode =  Invalid Label or Barcode for Parent Specimen :{0}
 invalid.site.name =  Invalid Site Name : {0}
 invalid.parent.specimen.identifier = Invalid Identifier of Parent Specimen :{0}
+invalid.specimen.identifier=Invalid Identifier of Specimen :{0}
 error.parent.specimen.consent.tier = Error in ConsentTierStatusCollection retrieval for Parent Specimen :{0}
 error.parent.specimen.biohazard = Error in BioHazard Collection retrieval for Parent Specimen :{0}
 label.mandatory =  Lable is a manadatory field
@@ -2419,7 +2420,7 @@ confirm.washu.user=Incorrect confirm email address, WashU domain email address
 
 #Bulk Operations
 bulk.bulkoperations=Bulk Operations
-bulk.bulkoperation.jobs=Bulk Operation Jobs
+bulk.bulkoperation.dashboard=Bulk Operations Dashboard
 bulk.download.template=Select Bulk Operation:
 bulk.upload.file=Upload Template:
 bulk.button.download.template=Download Template
@@ -2457,4 +2458,3 @@ metadata.not.loaded=auditablemetadata.xml is not loaded. Please initialize it be
 db.file.not.found.error=File not found issues, File instance specified in column value bean does not exist. SQL is {0}.
 class.not.found.error = Class {0} not found.
 visit.noSCG=SCG is not associated with visit
-user.not.exists=User with login name {0} does not exist.
