--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2458,3 +2458,13 @@ metadata.not.loaded=auditablemetadata.xml is not loaded. Please initialize it be
 db.file.not.found.error=File not found issues, File instance specified in column value bean does not exist. SQL is {0}.
 class.not.found.error = Class {0} not found.
 visit.noSCG=SCG is not associated with visit
+
+
+#Bulk service
+bulk.operation.errors = {0}.
+bulk.operation.client.error=Error: Problem while instantiating a client session during bulk operation where URL is {0}, loginName is {1} and password is {2}.
+bulk.operation.file.not.found=Error: Problem in locating the file(s) {0},{1}.   
+bulk.operation.request.param.error=Error: Problem in getting the request parameters.
+bulk.operation.client.login.error=Error: No login details, please login before performing bulk operation.  
+bulk.params.required=Error: Bulk parameters are either missing  or incorrect {0}, please check the below usage command.
+
