Specimen Type multiselect combo
SVN-Revision: 23761

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2468,3 +2468,7 @@ bulk.operation.request.param.error=Error: Problem in getting the request paramet
 bulk.operation.client.login.error=Error: No login details, please login before performing bulk operation.  
 bulk.params.required=Error: Bulk parameters are either missing  or incorrect {0}, please check the below usage command.
 
+specimenclass.tissue=Tissue Specimen
+specimenclass.fluid=Fluid Specimen
+specimenclass.cell=Cell Specimen
+specimenclass.molecular=Molecular Specimen
