Bug 15002 -  Bulk operations UI Issues.
SVN-Revision: 23762

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2418,32 +2418,6 @@ user.not.exists=User with login name {0} does not exist.
 email.washu.user=Incorrect email address, WashU domain email address
 confirm.washu.user=Incorrect confirm email address, WashU domain email address
 
-#Bulk Operations
-bulk.bulkoperations=Bulk Operations
-bulk.bulkoperation.dashboard=Bulk Operations Dashboard
-bulk.download.template=Select Bulk Operation:
-bulk.upload.file=Upload Template:
-bulk.button.download.template=Download Template
-bulk.button.upload=Upload Data
-bulk.view.report=Click here to view report
-bulk.error.incorrect.operation.name=Incorrect bulk operation. No such operation is allowed in Bulk Operation.
-bulk.error.bulk.metadata.xml.file=Error in loading BULK OPERATION META DATA. Please report this problem to Administrator.
-bulk.error.incorrect.csv.column.name=Column name is not specified for a attribute in bulk operation meta data.Please report this problem to the Administrator.
-bulk.error.incorrect.xml.attribute.datatype=DataType specified for the Attribute in bulk operation meta data  not specified. Please report this problem to the Administrator.
-bulk.error.create.csv.output.file=Error in creating the CSV Output File. Please report this problem to Administrator.
-bulk.error.loading.bulk.metadata.xml.file=Error in loading bulk operation related meta data. Please report this problem to Administrator.
-bulk.error.reading.csv.file=Error in reading the uploaded .csv file. Please try again.
-bulk.object.not.found=Object not found in the database.
-bulk.success.message=Bulk operation successfully done.
-bulk.error.csv.column.name.change=Column name in CSV template is changed. Please download a new template again.
-bulk.error.database.operation.reading.operation.name.xml.template=Error in Database operation while retrieving the Bulk Operation Name and its meta data. Please report this problem to Administrator.
-bulk.no.templates.loaded.message=Please load Bulk Operations template to perform Bulk Operations.
-db.malicious.data.encountered=Invalid data : {0}, encountered invalid character character : {1}. Remove "{1}" malicious code before performing database operation.
-class.auditable=Class {0} is present in auditablemetadata.xml and set to auditable. Audit all it's instance while inserting/updating it to database..
-dao.close.or.not.initialized=DAO is either not initialized properly or it may be closed.
-problem.in.fetching.hibernate.metadata=Either application name is not appropriate or the Hibernate metadata not initialized for the application.
-
-
 #For Audit changes.
 problem.parsing.xml=Problem while parsing auditablemetadata.xml, check/verify it to avoid parsing issues.
 problem.in.audit.invalid.instance=Problem while performing the audit operation, Object not auditable. Check the instance before calling the audit events."
@@ -2457,6 +2431,7 @@ metadata.not.loaded=auditablemetadata.xml is not loaded. Please initialize it be
 
 db.file.not.found.error=File not found issues, File instance specified in column value bean does not exist. SQL is {0}.
 class.not.found.error = Class {0} not found.
+visit.noSCG=SCG is not associated with visit
 visit.noSCG=SCG is not associated with visit
 
 
