--- a/CaTissue_TestCases/conf/hibernate.properties
+++ b/CaTissue_TestCases/conf/hibernate.properties
@@ -1,8 +1,8 @@
-hibernate.dialect org.hibernate.dialect.MySQLDialect
-hibernate.connection.driver_class com.mysql.jdbc.Driver
-hibernate.connection.username root
-hibernate.connection.password 22081982
-hibernate.connection.url jdbc:mysql://localhost:3307/p5_8Dec
+hibernate.dialect @@DIALECT@@
+hibernate.connection.driver_class @@DRIVER@@
+hibernate.connection.username @@DATABASE_USERNAME@@
+hibernate.connection.password @@DATABASE_PASSWORD@@
+hibernate.connection.url @@URL@@
 hibernate.c3p0.min_size 5
 hibernate.c3p0.max_size 20
 hibernate.c3p0.timeout 1800
