--- a/build.xml
+++ b/build.xml
@@ -551,6 +551,8 @@
 		<!--<copy file="shippingtracking.zip" todir="${zip.dir}" overwrite="true" />-->
 		<copy file="dynamicextensions.zip" todir="${zip.dir}" overwrite="true" />
 		<copy file="AdvanceQuery_Installable.zip" todir="${zip.dir}" overwrite="true" />
+		<copy file="bulkoperator.zip" todir="${zip.dir}" overwrite="true" />
+		<copy file="bulkOperation.properties" todir="${zip.dir}" overwrite="true" />
 		<!-- only single war file is being used so comment it -->
 		<!-- <copy file="catissuecorecsm.war" todir="${zip.dir}" overwrite="true" /> -->
 		<copy file="catissuecore-ds.xml" todir="${zip.dir}" overwrite="true" />
