Added property required for category creation
SVN-Revision: 23813

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -1,13 +1,13 @@
-#Enter absolute path of the installed directory of JBoss server {JBOSS_HOME}. 
+#Enter absolute path of the installed directory of JBoss server {JBOSS_HOME}.
 #Please note that the path must be separated by Unix style path separator "/".
 jboss.home.dir=
 #Please specify the server configuration name of jboss where you want to deploy.
-#By default it is set to 'default' configuration. This is useful if someone wants 
+#By default it is set to 'default' configuration. This is useful if someone wants
 #to run multiple instances of suite application on same jboss.
 jboss.server.name=default
 
 #Enter server port on which JBoss is listing the client request
-#Default port is 8080 
+#Default port is 8080
 jboss.server.port=8080
 
 #database type permissible values: oracle or mysql or mssqlserver
@@ -36,7 +36,7 @@ email.administrative.emailAddress=
 email.sendEmailFrom.emailAddress=
 email.mailServer=
 
-#Application login timeout interval in minutes. 
+#Application login timeout interval in minutes.
 #Default value is 30 minutes
 session.timeout=30
 #sets the addition info on home page
@@ -61,12 +61,12 @@ jboss.container.secure=
 caCORE.jBoss.home.dir=
 caCORE.project.name=
 
-#Choose below option to show/hide dynamic extensions default clinical and pathology forms loaded by the application. 
+#Choose below option to show/hide dynamic extensions default clinical and pathology forms loaded by the application.
 #Choose false to show all clinical and pathology default annotations for data entry
 #Choose true and edit the Show_Hide_Forms.csv present in the installable folder to display selective forms for data entry
 show.hide.forms=true
 
-#Choose below option to associate dynamic extensions default clinical and pathology forms to the Collection Protocols. 
+#Choose below option to associate dynamic extensions default clinical and pathology forms to the Collection Protocols.
 #Choose false to show all clinical and pathology default annotations for data entry
 #Choose true and edit the Show_Hide_Forms.xml present in the installable folder to associate selective forms to Collection Protocol for data entry
 show.hide.forms.based.on.CPs=false
@@ -82,3 +82,6 @@ empi.database.name=
 empi.database.username=
 empi.database.password=
 empi.database.schema=
+
+#URL needed for category creation.
+Application.url=
