Bug 15163 -  Unique values should be accepted while adding objects using Bulk operations
SVN-Revision: 23815

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1884,6 +1884,8 @@ errors.distribution.item.specimenArray=Distributed item Specimen Array
 errors.specimenCollectionGroup.collectionprotocolregistration=CollectionProtocol Registration
 errors.specimenCollectionGroup.collectionprotocol=Collection Protocol
 
+errors.specimenCollectionGroup.collectionprotocolregistration.ppid=Protocol Participant Identifier and collection protocol registration id both are invalid. Any one of them  
+
 errors.collectionprotocolregistration.atleast=Either protocol participant identifier or participant is required.
 errors.cannotedit.firsttimelogin=You cannot edit the first time login field
 specimencollectiongroup.collectionStatus.errMsg=Collection Status is invalid.
