--- a/build.xml
+++ b/build.xml
@@ -550,6 +550,7 @@
 		<copy file="caTissuePrintWebService.war" todir="${zip.dir}" overwrite="true" />
 		<!--<copy file="shippingtracking.zip" todir="${zip.dir}" overwrite="true" />-->
 		<copy file="dynamicextensions.zip" todir="${zip.dir}" overwrite="true" />
+		<copy file="categoryCreator.zip" todir="${zip.dir}" overwrite="true" />
 		<copy file="AdvanceQuery_Installable.zip" todir="${zip.dir}" overwrite="true" />
 		<copy file="bulkoperator.zip" todir="${zip.dir}" overwrite="true" />
 		<copy file="bulkOperation.properties" todir="${zip.dir}" overwrite="true" />
