--- a/catissuecore-properties/log4j.properties
+++ b/catissuecore-properties/log4j.properties
@@ -14,7 +14,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%5p %d{HH:mm:ss,SSS} (%C{1}) - %
 
 # LOGFILE is set to be a File appender using a PatternLayout.
 log4j.appender.LOGFILE=org.apache.log4j.RollingFileAppender
-log4j.appender.LOGFILE.File=@@jbosshome@@/catissue.log
+log4j.appender.LOGFILE.File=@@jbosshome@@/log/catissue.log
 log4j.appender.LOGFILE.Append=true
 log4j.appender.LOGFILE.MaxFileSize=1024KB
 log4j.appender.LOGFILE.MaxBackupIndex=7
@@ -24,7 +24,7 @@ log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern= %-5p %d %C{3} - %m%n
 # LOGFILE for all hibernate logs
 log4j.appender.HIBERNATE=org.apache.log4j.RollingFileAppender
-log4j.appender.HIBERNATE.File=@@jbosshome@@/hibernatesql.log
+log4j.appender.HIBERNATE.File=@@jbosshome@@/log/hibernatesql.log
 log4j.appender.HIBERNATE.Append=true
 log4j.appender.HIBERNATE.MaxFileSize=1024KB
 log4j.appender.HIBERNATE.MaxBackupIndex=7
