Setting default values. idpInstall.properties is replaced with this file. And idp_deploy.xml is replaced with washu_deploy.xml.
SVN-Revision: 23844

--- a/washuInstall.properties
+++ b/washuInstall.properties
@@ -1,6 +1,6 @@
 #if catissue has IdP then idp.enabled=true
 #if idp.enabled=true then only fill below properties of #CLINPORTAL DATABASE CREDENTIALS and #CSM DATABASE CREDENTIALS
-idp.enabled=true
+idp.enabled=
 #CLINPORTAL DATABASE CREDENTIALS
 
 #database type permissible values: oracle or mysql
@@ -16,12 +16,12 @@ clinportal.database.username=
 clinportal.database.password=
 
 #CSM DATABASE CREDENTIALS
-csm.database.type=oracle
-csm.database.host=10.88.199.105
-csm.database.port=1521
-csm.database.name=orcl
-csm.database.username=deepali
-csm.database.password=deepali
+csm.database.type=
+csm.database.host=
+csm.database.port=
+csm.database.name=
+csm.database.username=
+csm.database.password=
 
 #clinportal-caTissue integration
 clinportal.integrationEnabled=false
