Changes for caCore generation
SVN-Revision: 23863

--- a/washuInstall.properties
+++ b/washuInstall.properties
@@ -27,3 +27,5 @@ csm.database.password=
 clinportal.integrationEnabled=false
 clinportal.keyStorePath=
 clinportal.url=
+
+cacore.deployable.location=
