--- a/caTissueSuite_Client/ApplicationResources.properties
+++ b/caTissueSuite_Client/ApplicationResources.properties
@@ -2374,3 +2374,63 @@ error.privileges.from.given.role = Error while getting privileges from given rol
 hibernate.exception = Hibernate Exception.
 SQL.exp = Error while executing query.
 print.issue = Error while printing.
+
+
+#Bulk service
+bulk.operation.errors = {0}.
+bulk.operation.client.error=Error: Problem while instantiating a client session during bulk operation where URL is {0}, loginName is {1} and password is {2}.
+bulk.operation.file.not.found=Error\: Problem in locating the file(s) {0},{1}.   
+bulk.operation.request.param.error=Error: Problem in getting the request parameters.
+bulk.operation.client.login.error=Error\: No login details, please login before performing bulk operation.  
+bulk.params.required=Error: Bulk parameters are either missing  or incorrect {0}, please check the below usage command.
+
+#Bulk Operations
+bulk.bulkoperations=Bulk Operations
+bulk.bulkoperation.dashboard=Bulk Operations Dashboard
+bulk.download.template=Select Bulk Operation:
+bulk.upload.file=Select Template:
+bulk.button.download.template=Download Template
+bulk.button.upload=Upload Data
+bulk.view.report=Click here to view report
+bulk.error.incorrect.operation.name=Incorrect bulk operation. No such operation is allowed in Bulk Operation.
+bulk.error.bulk.metadata.xml.file=Error in loading BULK OPERATION META DATA. Please report this problem to Administrator.
+bulk.error.incorrect.csv.column.name=Column name is not specified for a attribute in bulk operation meta data.Please report this problem to the Administrator.
+bulk.error.incorrect.xml.attribute.datatype=DataType specified for the Attribute in bulk operation meta data  not specified. Please report this problem to the Administrator.
+bulk.error.create.csv.output.file=Error in creating the CSV Output File. Please report this problem to Administrator.
+bulk.error.loading.bulk.metadata.xml.file=Error in loading bulk operation related meta data. Please report this problem to Administrator.
+bulk.error.reading.csv.file=Error in reading the uploaded .csv file. Please try again.
+bulk.object.not.found=Object not found in the database.
+bulk.success.message=Bulk operation successfully done.
+bulk.error.csv.column.name.change=Column name in CSV template is changed. Please download a new template again.
+bulk.error.database.operation.reading.operation.name.xml.template=Error in Database operation while retrieving the Bulk Operation Name and its meta data. Please report this problem to Administrator.
+bulk.no.templates.loaded.message=Please load Bulk Operations template to perform Bulk Operations.
+db.malicious.data.encountered=Invalid data : {0}, encountered invalid character character : {1}. Remove "{1}" malicious code before performing database operation.
+class.auditable=Class {0} is present in auditablemetadata.xml and set to auditable. Audit all it's instance while inserting/updating it to database..
+dao.close.or.not.initialized=DAO is either not initialized properly or it may be closed.
+problem.in.fetching.hibernate.metadata=Either application name is not appropriate or the Hibernate metadata not initialized for the application.
+bulk.error.csv.file.not.found=CSV File Not Found at the specified path.
+bulk.error.csv.file.reading=Error in reading the CSV File.
+bulk.error.csv.file.writing=Error in writing the CSV Template File.
+bulk.error.xml.file.not.found=XML File Not Found at the specified path.
+bulk.error.xml.file.reading=Error in reading the XML File.
+bulk.error.incorrect.csv.file=Either the CSV file path is incorrect or the file format in incorrect.
+bulk.error.incorrect.xml.file=Either the XML file path is incorrect or the XML file format is incorrect.
+bulk.error.xml.missing.name=The keyword {0} is either missing or incorrectly written in the XML for the main class tag.
+bulk.error.xml.incorrect.name=The {0} value mentioned is incorrect in the XML tag.
+bulk.error.xml.incorrect.relationshiptype=The 'relationShipType' value mentioned for {0} is incorrect. Valid values are 'main', 'association' and 'containment' only.
+bulk.incorrect.data.error=Error in initializing value {0} Of correct DataType.
+bulk.operation.issues={0}
+bulk.error.discriminator=Error in Discriminator Object Instantiation.
+bulk.xml.template.empty=Bulk Meta Data XML file contains no Bulk Operation Class.
+bulk.file.not.found={0} file not found.
+bulk.file.reading.error=Error while reading {0} file.
+bulk.database.error=Error in creating database connection.
+bulk.database.error.driver=Error in creating database connection. Please check the database driver.
+bulk.database.error.driver.msg=Error in creating database connection. Please check the database driver or the caTissueInstall.properties have some missing database properties.
+bulk.matching.operation.name=Cannot insert the template as same Operation Name already exists in the database.
+bulk.matching.dropdown.name=Cannot insert template as same DropDown Name already exists in the database.
+bulk.database.insert.update.error=Error in {0} the record in database.
+bulk.error.zip.file=Error while creating ouput report zip file.
+bulk.error.csv.file=Error while creating output csv file.
+bulk.invalid.username.password=Invalid User Name or Password.
+bulk.error.dropdown=Error in retrieving data from database for populating dropdown values.
