Bug 15552 - Cannot create Aliquots in same container through bulk operations API.
SVN-Revision: 23886

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1760,6 +1760,7 @@ error.parentobject.closed={0} is already marked as closed.
 error.parentobject.disabled={0} is already marked as disabled.
 error.aliquots={0} cannot be created.
 error.derived={0} cannot be created.
+error.aliquot.container.mismatch=Container Name specified for the aliquot. It does not match with the Parent Specimen Container Name
 
 #Specimen Array Aliquots keys
 specimenArrayAliquots.createTitle=Create Specimen Array Aliquot
@@ -2433,7 +2434,6 @@ metadata.not.loaded=auditablemetadata.xml is not loaded. Please initialize it be
 
 db.file.not.found.error=File not found issues, File instance specified in column value bean does not exist. SQL is {0}.
 class.not.found.error = Class {0} not found.
-visit.noSCG=SCG is not associated with visit
 visit.noSCG=SCG is not associated with visit
 
 
