Bug 15608 -  Specifying container name for aliquot creation using bulk shows invalid container name error.
SVN-Revision: 23927

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1760,7 +1760,7 @@ error.parentobject.closed={0} is already marked as closed.
 error.parentobject.disabled={0} is already marked as disabled.
 error.aliquots={0} cannot be created.
 error.derived={0} cannot be created.
-error.aliquot.container.mismatch=Container Name specified for the aliquot. It does not match with the Parent Specimen Container Name
+error.aliquot.multiple.container.names=Multiple Container Names specified. Only one Container name required when Aliquot's in Same Container are to be created.
 
 #Specimen Array Aliquots keys
 specimenArrayAliquots.createTitle=Create Specimen Array Aliquot
